tests/negative/neg_pr118d1_growable_to_fixed_outside_guard.safe
-- Test: neg_pr118d1_growable_to_fixed_outside_guard
-- Description: Exact-length narrowing does not propagate outside the guarded region.
-- Expected: REJECT source_frontend_error

package neg_pr118d1_growable_to_fixed_outside_guard

   subtype pair_index is integer (1 to 2);
   type pair is array (pair_index) of integer;
   type int_list is array of integer;

   function bad_value returns integer

      values : int_list = [10, 20];

      if values.length == 2
         print (1);

      fixed : pair = values;

      return fixed (1);

   print (bad_value ())
